update JJ's talk slides

--- a/talks.html
+++ b/talks.html
@@ -205,7 +205,7 @@ $(document).ready(function () {
 
 
 <p>Link to Hadley Wickham’s slides coming soon! Hadley is Chief Scientist at RStudio, a member of the R Foundation, and Adjunct Professor at Stanford University and the University of Auckland. <img src="Hadley_Wickham_Flyer.png" style="width:65.0%" /></p>
-<p>Link to JJ Allaire’s slides coming soon! JJ is the Founder and CEO of RStudio and the author of the RStudio IDE. <img src="JJ_Allaire_Flyer.png" style="width:65.0%" /></p>
+<p><a href="https://rstd.io/ml-with-tensorflow-and-r/">Link to JJ Allaire’s slides</a>. JJ is the Founder and CEO of RStudio and the author of the RStudio IDE. <img src="JJ_Allaire_Flyer.png" style="width:65.0%" /></p>
 <p>Link to Lee Wilkinson’s slides coming soon! Lee is perhaps most well-known as the father of the Grammar of Graphics. <img src="Leland_Wilkinson_Flyer.png" style="width:65.0%" /></p>
 <p><a href="https://github.com/joseph-rickert/Stanford_Talk_12-5-17">Link to Joe Rickert’s slides</a>. Joe is the R Community Ambassador. <img src="Joseph_Rickert_Flyer.png" style="width:65.0%" /></p>
 <p><a href="http://heather.cs.ucdavis.edu/StanfordR.pdf">Link to Norm Matloff’s slides</a>. Norm is professor of computer science at the University of California at Davis and author of the books “The Art of R Programming” and “Statistical Regression and Classification: From Linear Models to Machine Learning”. <img src="Norm_Matloff_Flyer.png" style="width:65.0%" /></p>
