--- a/talks.html
+++ b/talks.html
@@ -204,6 +204,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>Link to Hadley Wickham’s slides coming soon! Hadley is Chief Scientist at RStudio, a member of the R Foundation, and Adjunct Professor at Stanford University and the University of Auckland. <img src="Hadley_Wickham_CS_Gates_Flyer.png" style="width:65.0%" /></p>
 <p>Link to Hadley Wickham’s slides coming soon! Hadley is Chief Scientist at RStudio, a member of the R Foundation, and Adjunct Professor at Stanford University and the University of Auckland. <img src="Hadley_Wickham_Flyer.png" style="width:65.0%" /></p>
 <p><a href="https://rstd.io/ml-with-tensorflow-and-r/">Link to JJ Allaire’s slides</a>. JJ is the Founder and CEO of RStudio and the author of the RStudio IDE. <img src="JJ_Allaire_Flyer.png" style="width:65.0%" /></p>
 <p>Link to Lee Wilkinson’s slides coming soon! Lee is perhaps most well-known as the father of the Grammar of Graphics. <img src="Leland_Wilkinson_Flyer.png" style="width:65.0%" /></p>
